--- a/src/components/layout/HomeInfo.astro
+++ b/src/components/layout/HomeInfo.astro
@@ -2,11 +2,11 @@
 import ChristmasHat from '@components/christmas/ChristmasHat.astro';
 import ButtonLink from '@components/control/ButtonLink.astro';
 import type { HomeSiderType } from '@constants/enum';
-import { Routes, routers } from '@constants/router';
-import { christmasConfig, siteConfig } from '@constants/site-config';
+import { RESERVED_ROUTES, routers } from '@constants/router';
+import { christmasConfig, configuredSeriesSlugs, enabledSeriesSlugs, siteConfig } from '@constants/site-config';
 import { getAllTags, getCategoryList, getPostCount, getSortedPosts } from '@lib/content';
 import { getLqipStyle } from '@lib/lqip';
-import { cn } from '@lib/utils';
+import { cn, filterNavItems } from '@lib/utils';
 import { Icon } from 'astro-icon/components';
 import type { BlogSchema } from '@/types/blog';
 import Social from './Social.astro';
@@ -29,13 +29,8 @@ const allTags = Object.entries(tags).map(([tag, count]) => ({ tag, count }));
 const uniqueId = `home-info-${Math.random().toString(36).substring(2, 11)}`;
 const { className } = Astro.props;
 
-// Filter out weekly route if disabled
-const filteredRouters = routers.filter((item) => {
-  if (item.path === Routes.Weekly && !siteConfig.featuredSeries?.enabled) {
-    return false;
-  }
-  return true;
-});
+// Filter navigation items to exclude disabled series
+const filteredRouters = filterNavItems(routers, configuredSeriesSlugs, enabledSeriesSlugs, RESERVED_ROUTES);
 ---
 
 <div class={cn('flex flex-col items-center', className)} data-home-info-container={uniqueId}>
