--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -7,7 +7,7 @@ import { CONTENT_PADDING } from '@constants/layout';
 import { siteConfig } from '@constants/site-config';
 import Layout from '@layouts/Layout.astro';
 import TwoColumnLayout from '@layouts/TwoColumnLayout.astro';
-import Remark from '@/components/common/Remark.astro';
+import { Comment } from '@/components/comment';
 
 const title = `友情链接 | ${siteConfig.title}`;
 const description = '我的小伙伴们，欢迎加友链～';
@@ -25,7 +25,7 @@ const description = '我的小伙伴们，欢迎加友链～';
       </div>
       <div class="mb-4">
         <FriendRequestForm client:visible />
-        <Remark />
+        <Comment />
       </div>
     </div>
   </TwoColumnLayout>
