--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,3 +12,4 @@
 @import "./components/pagefind.css";
 @import "./components/embed.css";
 @import "./components/lqip.css";
+@import "./components/file-download.css";
